<resources>
    <string name="app_name">SQLite Db</string>
    <string name="sqlite_getting_started">SQLite Getting Started</string>
    <string name="first_name">First Name</string>
    <string name="marks">Marks</string>
    <string name="surname">SurName</string>
    <string name="add_data">Add Data</string>
    <string name="view_data">View Data</string>
    <string name="id_number">ID Number</string>
    <string name="save_details">Save Details</string>
</resources>