<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ParentsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Parent Details"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:gravity="center"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/first_name"
        android:textColorHint="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/surname"
        android:textColorHint="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/idNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/id_number"
        android:textColorHint="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/saveData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/save_details"
        android:textColor="@android:color/black"
        android:background="@color/colorAccent"
        android:textColorHint="@color/colorPrimaryDark" />


</LinearLayout>